# Maestria_IUE_tareas

concurrence_rs/examples/: downloadtemp.rs
concurrence_rs/src/: lib.rs
drones/: main.py
drones/drones/models/: __init__.py  commands.py
final_project/concurrence_py/: pyproject.toml
final_project/concurrence_py/src/concurrence_py/: download_temperatures.py
final_project/concurrence_py/tests/: test_download_temperatures.py
final_project/data_process/: pyproject.toml
final_project/data_process/src/data_process/: main.py
final_project/data_process/src/rust_lib/parallel_rs/: Cargo.toml  pyproject.toml
final_project/data_process/src/rust_lib/parallel_rs/src/: lib.rs
final_project/parallel_py/: pyproject.toml
final_project/parallel_py/src/parallel_py/: paralelismo.py
parallel_rs/examples/: process_temp.rs
rustatistics_2/: Cargo.toml
rustatistics_2/examples/: calcular.rs
rustatistics_2/src/: lib.rs
tarea1/estadisticas_py/: pyproject.toml
tarea1/estadisticas_py/examples/: prueba_statistics.py
tarea1/estadisticas_py/src/estadisticas_py/: mypy_statistics.py
tarea1/estadisticas_rs/: Cargo.toml
tarea1/estadisticas_rs/examples/: prueba.rs
tarea1/estadisticas_rs/src/: lib.rs
tarea2/: archivo_de_prueba.txt
tarea2/concurrence_rs/: Cargo.toml
tarea2/concurrence_rs/examples/: test2.rs
tarea2/parallel_rs/: Cargo.toml
tarea2/parallel_rs/src/: lib.rs
tarea2/rustatistics_2/examples/: pruebas.rs
tarea3/: main.py  pyproject.toml
tarea3/drones/models/: drone.py  quadcopter.py
tarea3/tests/: test_simulation.py
