[project]
name = "concurrence-py"
version = "0.1.1"
description = "Módulo para descargar datos de temperatura de forma asíncrona."
authors = [
    {name = "rockov78",email = "rafael.chavesnovoa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.13,<4.0.0)",
    "maturin (>=1.8.3,<2.0.0)"
    ]

[tool.poetry]
packages = [{include = "concurrence_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
