[project]
name = "estadisticas_py"
version = "0.1.0"
description = ""
authors = [
    {name = "rockov78",email = "rafael.chavesnovoa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "estadisticas_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
